--- a/haru-fashion/components/Card/Card.module.css
+++ b/haru-fashion/components/Card/Card.module.css
@@ -19,5 +19,5 @@
 }
 
 .itemName {
-  @apply text-xs sm:text-base block no-underline text-gray500 mb-1 truncate;
+  @apply  sm:text-base block no-underline text-gray500 mb-1 truncate;
 }
