--- a/haru-fashion/components/Header/Header.module.css
+++ b/haru-fashion/components/Header/Header.module.css
@@ -52,6 +52,10 @@
   @apply hidden lg:block;
 }
 
+.rightMenu li:nth-child(2) {
+  @apply block sm:hidden;
+}
+
 .rightMenu li:nth-child(3) {
   @apply hidden sm:block;
 }
